--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
       rel='stylesheet'
       href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
     />
-    <link rel='stylesheet' href='./css/style.css' />
+    <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body >
     <nav class='navbar' style="background-color: #FFB611;">
@@ -22,36 +22,37 @@
           alt='move icon'
           href='/'
         />
-
+        {{!-- "move" text that links back to the hompage --}}
          <a class='navbar-brand' href='/'> move</a>
       </a>
-        {{!-- If a user is not logged in then render login and signup links in the navbar --}}
-        {{#unless logged_in}}
-        <a class='navbar-brand' href='/login'>login</a>
-        <a class='navbar-brand' href='/signup'>signup</a>
-        {{/unless}}
-        {{!-- If a user is logged in then render profile and logout links in the navbar --}}
-        {{#if logged_in}}
+      {{!-- If a user is not logged in then render login and signup links in the navbar --}}
+      {{#unless logged_in}}
+      <a class='navbar-brand' href='/login'>login</a>
+      <a class='navbar-brand' href='/signup'>signup</a>
+      {{/unless}}
+      {{!-- If a user is logged in then render profile and logout links in the navbar --}}
+      {{#if logged_in}}
       <a class='navbar-brand' href='/profile'>profile</a>
       <a class='navbar-brand' id='logout'>logout</a>
       <script src='/js/logout.js'></script>
-    {{/if}}
-    {{!-- "move" text that links back to the hompage --}}
+      {{/if}}
        
-      </nav>
-    </div>
-    <div class='collapse navbar-collapse' id='navbarNav'>
-    </div>
-{{!-- The body handlebar will render our homepage --}}
+    </nav>
+  </div>
+  <div class='collapse navbar-collapse' id='navbarNav'>
+  </div>
+
+    {{!-- The body handlebar will render the templates --}}
     <main class='container container-fluid mt-5'>
      
       {{{body}}}
     
     </main>
 
-    <script
-      src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'
-    ></script>
+    {{!-- bootstrap framework scripts --}}
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     {{!-- Socket script --}}
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -86,8 +87,10 @@
             let sentPage = '';
             if (path === '/') {
               sentPage = 'home';
+            } else if (path.split('/').length > 2) {
+              sentPage = path.split('/')[1]+'_'+path.split('/')[2];;
             } else {
-              sentPage = path.split('/')[1];
+              sentPage = path.split('/')[1]
             }
             // console.log('sentPage ' + sentPage);
 
@@ -102,11 +105,13 @@
           let thisPage = '';
           if (path === '/') {
             thisPage = 'home';
+          } else if (path.split('/').length > 2) {
+            thisPage = path.split('/')[1]+'_'+path.split('/')[2];
           } else {
-            thisPage = path.split('/')[1];
+            thisPage = path.split('/')[1]
           }
-          // console.log('thisPage ' + thisPage);
-          // console.log('sentPage (in rec): ' + sentPage);
+          console.log('thisPage ' + thisPage);
+          console.log('sentPage (in rec): ' + sentPage);
 
           if (thisPage === sentPage) {
             const socketID = socket.id;
