--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,7 +114,9 @@
 
     height: 400px;
     border: 1px solid var(--darkGreen50);
-    font: 16px/26px Georgia, Garamond, Serif;
+    /* font: 16px/26px Georgia, Garamond, Serif; */
+    font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Helvetica, Arial, sans-serif;;
     overflow: auto;
     background-color: var(--lightYellow75);
   }
