--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,31 +49,25 @@
 /* chat client elements */
   #socketForm {
     background: var(--darkGreen50);
-    padding: 0.25rem;
-    display: flex;
-    height: 3rem;
-    /* width: 300px; */
     box-sizing: border-box;
     backdrop-filter: blur(10px);
   }
   #socketText {
     border: none;
-    padding: 0 1rem;
-    flex-grow: 1;
     border-radius: 2rem;
-    margin: 0.25rem;
+    height:2rem;
   }
   #socketText:focus {
     outline: none;
   }
-  #socketForm > button {
+  #socketButton {
     background: var(--darkGreen);
     border: none;
-    padding: 0 1rem;
-    margin: 0.25rem;
     border-radius: 3px;
+    flex-grow:0;
     outline: none;
     color: var(--darkYellow);
+    height:2rem;
   }
   #socketText{
     background-color: var(--lightYellow75);
@@ -100,7 +94,6 @@
 
   .socket-message {
     margin-right: 1em;
-    /* width: 175px; */
   }
   .socket-user {
     width: 90px;
@@ -114,7 +107,6 @@
 
     height: 400px;
     border: 1px solid var(--darkGreen50);
-    /* font: 16px/26px Georgia, Garamond, Serif; */
     font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Helvetica, Arial, sans-serif;;
     overflow: auto;
