--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,9 @@
     margin-top: 0;
     margin-bottom: 0;
   }
+  .navbar{
+    background-color: var(--darkYellow);
+  }
 
 /* chat client elements */
   #socketForm {
